--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard",
-    "cordova-plugin-geolocation"
+    {
+      "locator": "https://github.com/katzer/cordova-plugin-background-mode.git",
+      "id": "de.appplant.cordova.plugin.background-mode"
+    }
   ],
   "cordovaPlatforms": [
-    "ios",
     "android"
   ]
 }
