--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "angular-google-maps": "~2.2.1",
     "angular-resource": "~1.4.6",
-    "ngCordova": "~0.1.20-alpha"
+    "ngCordova": "~0.1.20-alpha",
+    "oauth-ng": "~0.4.2"
   }
 }
