--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "com.ionic.keyboard",
+    "org.apache.cordova.geolocation",
     {
       "locator": "https://github.com/katzer/cordova-plugin-background-mode.git",
       "id": "de.appplant.cordova.plugin.background-mode"
