--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,6 @@
     "angular-google-maps": "~2.2.1",
     "angular-resource": "~1.4.6",
     "ngCordova": "~0.1.20-alpha",
-    "oauth-ng": "~0.4.2"
+    "ngstorage": "~0.3.0"
   }
 }
